--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=U5-W1-D1-Pratica
 tavolo1.coperto=3
 tavolo2.coperto=2
+spring.datasource.url=jdbc:postgresql://localhost:5432/u5w1d4pratica
+spring.datasource.username=postgres
+spring.datasource.password=corsoepicode
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
